fix tab complete list