@@ -1,7 +1,5 @@
 package tokyo.nakanaka.shapeGenerator.sgSubCommandHandler;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import tokyo.nakanaka.Axis;
@@ -69,11 +67,12 @@ public class ScaleCommandHandler implements SubCommandHandler{
 	@Override
 	public List<String> onTabComplete(PlayerData playerData, Player player, String[] args) {
 		if(args.length == 1) {
-			return Arrays.asList("x", "y", "z");
+			return List.of("x", "y", "z");
 		}else if(args.length == 2) {
-			return Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "9", "10");
+			return List.of("0.5", "1.0", "1.5", "2.0", "2.5", "3.0", "3.5", "4.0",
+					"5.0", "6.0", "6.5", "7.0", "7.5", "8.0", "8.5", "9.0", "9.5");
 		}else {
-			return new ArrayList<>();
+			return List.of();
 		}
 	}
 
