@@ -1,6 +1,5 @@
 package tokyo.nakanaka.shapeGenerator.sgSubCommandHandler;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -73,13 +72,14 @@ public class ShiftCommandHandler implements SubCommandHandler{
 	@Override
 	public List<String> onTabComplete(PlayerData playerData, Player player, String[] args) {
 		if(args.length == 1) {
-			return Arrays.asList(Direction.values()).stream()
+			return List.of(Direction.values()).stream()
 					.map(s -> s.toString().toLowerCase())
 					.collect(Collectors.toList());
 		}else if(args.length == 2) {
-			return Arrays.asList("1", "2", "3", "4", "5", "6", "7", "8", "9", "10");
+			return List.of("0.5", "1.0", "1.5", "2.0", "2.5", "3.0", "3.5", "4.0",
+					"5.0", "6.0", "6.5", "7.0", "7.5", "8.0", "8.5", "9.0", "9.5");
 		}else {
-			return Arrays.asList();
+			return List.of();
 		}
 	}
 	
